# Intelli-Core

./: .gitignore  Cargo.toml  README.md  checker.py  prunner.py  req.ini
Abot/: run.py
Abot/data/: schema.sql
Abot/doc/: api.key  private.key  settings.ini  settings.json  settings.jsonc  sysetting.json
Abot/lib/: cfx.py  utils.py  window.py
Abot/librs/: Cargo.toml
AndFind/: andfind
Autux/configs/: autux.conf
Autux/dev/: Coms.ini  taprec.py  tmxback
Autux/reqs/: TMX_Req.txt
CodeServer/: bash.bashrc
CodeServer/app/: app.py  run.py
Daemon/: counter.py
FstClkr/: Cargo.toml  build.rs
FstClkr/src/: main.rs
InTable/: JailBreak.ini  boot  run.sh  startup  table-setup.sh
InTable/lib/: boot.env  boot.sh  guide.sh  utils.sh  worker.sh
Maze/: app.py
OrnaBot/: orna.sh
OrnaBot/data/: data.jsonc  schema.sql
PLW/: Plw-PCB.kicad_sch  lp-controller.ino
Scripts/: FuXfi.sh  clicking.py  hold  medow  medow.py
TornBot/.docs/: Ids&items.json  extra_data.json  notes.md
TornBot/data/: settings.conf
abot/lib/: utils.py  window.py  worker.py
andfind/: matcher.py
autux/: build.sh
autux/comp/: autux
autux/configs/: settings.jsonc
autux/dev/: ATX.py  SETUP.sh  bash.bashrc  m2m2.py  taprec.py  termux-options.json  tmxapi.sh
autux/doc/: LICENSE  README.md  copyright
codeserver/: Req.ini  setup.sh
conf/: req.ini
conf/cloudflared/: 084aa438-1e1d-47a7-9749-602afa7b3a55.json  config.yaml
conf/code-server/: config.yaml
feat/: btc.py  m2m.py  medow.sh
src/: main.rs  templates.rs
templates/: base.html  landing.html  logs.html
(+24 files in other folders)
