[package]
name = "intellicap-core"
version = "0.2.1"
edition = "2021"
developer = "RectumRaider666"
uuid = "550e8400-e29b-41d4-a716-446655440000"
server = "Ubuntu-Desktop"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
askama = "0.12"
askama_axum = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.4"
